syntax = "proto3";

option go_package = "gitlab.ozon.dev/ipogiba/homework/loms/pkg/api/loms/v1;loms";

import "validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "Loms";
        version: "1.0.0";
    };
    schemes: HTTP;
    schemes: HTTPS;
    consumes: "application/json";
    produces: "application/json";
    security_definitions: {
        security: {
            key: "x-auth";
            value: {
                type: TYPE_API_KEY;
                in: IN_HEADER;
                name: "authorization";
            }
        }
    }
};


service Loms {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {
        description: "Loms service"
    };

    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {
        option (google.api.http) = {
            post: "/v1/order/create"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Создать заказ"
        };
    }

    rpc OrderInfo(OrderInfoRequest) returns (OrderInfoResponse) {
        option (google.api.http) = {
            get: "/v1/order/info/{order_id}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Получить информацию о заказе"
        };
    }

    rpc OrderPay(OrderPayRequest) returns (OrderPayResponse) {
        option (google.api.http) = {
            put: "/v1/order/pay/{order_id}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Оплатить заказ"
        };
    }

    rpc OrderCancel(OrderCancelRequest) returns (OrderCancelResponse) {
        option (google.api.http) = {
            delete: "/v1/order/cancel/{order_id}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Отменить заказ"
        };
    }

    rpc StocksInfo(StocksInfoRequest) returns (StocksInfoResponse) {
        option (google.api.http) = {
            get: "/v1/stocks/info/{sku}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Получить информацию по стокам для товара"
        };
    }
}

message Item {
    int32 sku = 1;
    uint32 count = 2;
}

message CreateOrderRequest {
    int64 user_id = 1;
    repeated Item items = 2;
}

message CreateOrderResponse {
    int64 order_id = 1;
}

message OrderInfoRequest {
    int64 order_id = 1;
}

message OrderInfoResponse {
    string status = 1 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            title: "status",
            description: "Статус заказа",
            min_length: 3,
            max_length: 140,
            pattern: "^(new|cancel|payed|awaiting_payment)$",
            type: STRING,
            format: "string",
        },
        (validate.rules).string = {
            min_len: 3,
            max_len: 140,
            pattern: "^(new|cancel|payed|awaiting_payment)$"
        }
    ];
    int64 user_id = 2;
    repeated Item items = 3;
}

message OrderPayRequest {
    int64 order_id = 1;
}

message OrderPayResponse {}


message OrderCancelRequest {
    int64 order_id = 1;
}

message OrderCancelResponse {}

message StocksInfoRequest {
    int64 sku = 1;
}

message StocksInfoResponse {
    uint64 count = 1;
}
